# commust

./: .gitignore  Cargo.toml  README.md  loco_app.sqlite-shm  loco_app.sqlite-wal
assets/views/: base.html
assets/views/auth/: login.html  register.html
assets/views/cart/: show.html
assets/views/products/: create.html  edit.html  list.html  show.html
config/: development.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20250202_124347_products.rs  m20250215_190002_postmetas.rs  m20250216_051031_postmetas.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  cart.rs  mod.rs  products.rs
src/helpers/: serdes.rs
src/models/: mod.rs  postmetas.rs  products.rs  users.rs
src/models/_entities/: mod.rs  postmetas.rs  prelude.rs  products.rs  users.rs
src/views/: auth.rs  cart.rs  mod.rs  products.rs
tests/models/: mod.rs  products.rs  users.rs
tests/requests/: auth.rs  cart.rs  mod.rs  prepare_data.rs
tests/tasks/: seed.rs
